--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
         <div class="testimonials-section col-sm-12">
             <h1 class="testimonials-title"> Testimonials </h1>
                <div>
-                <p> Robert Kelly does great work </p>
-                <p> Got it all done on time. </p>
-                <p> Fast and quality work. </p>
+                <p> "Robert Kelly does great work!" </p>
+                <p> "Finished earlier than my deadline and helped clarify my content." </p>
+                <p> "The best leagl eagle out there!" </p>
             </div>
         </div>
         
