--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <!-- Main component for a primary marketing message or call to action -->
       <div class="row title-screen">
     <div class="jumbotron col-sm-12">
-    <div class="rob-research">
+    <div class="rob-research layer">
         <h1>Robert's
         Research</h1>
         <p>Researching. Briefing. Editing. </p>
